--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,23 @@
 [build]
 publish = "public"
-command = "hugo -gc"
+command = "hugo"
 
 [context.production.environment]
 HUGO_VERSION = "0.54.0"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
 [context.split1]
-command = "hugo --gc --enableGitInfo"
+command = "hugo --enableGitInfo"
 [context.split1.environment]
 HUGO_VERSION = "0.54.0"
 HUGO_ENV = "production"
 [context.deploy-preview]
-command = "hugo --gc --buildFuture -b $DEPLOY_PRIME_URL"
+command = "hugo --buildFuture -b $DEPLOY_PRIME_URL"
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.54.0"
 
 [context.branch-deploy]
-command = "hugo --gc -b $DEPLOY_PRIME_URL"
+command = "hugo -b $DEPLOY_PRIME_URL"
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.54.0"
 [context.next.environment]
