--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,26 @@
 [build]
-publish = "public"
-command = "hugo"
+  command = "hugo --gc --minify -b $URL"
+  publish = "public"
+
+[build.environment]
+  HUGO_VERSION = "0.74.3"
+  HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
-HUGO_VERSION = "0.54.0"
-HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
-[context.split1]
-command = "hugo --enableGitInfo"
-[context.split1.environment]
-HUGO_VERSION = "0.54.0"
-HUGO_ENV = "production"
+  HUGO_ENV = "production"
+
 [context.deploy-preview]
-command = "hugo --buildFuture -b $DEPLOY_PRIME_URL"
-[context.deploy-preview.environment]
-HUGO_VERSION = "0.54.0"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-command = "hugo -b $DEPLOY_PRIME_URL"
-[context.branch-deploy.environment]
-HUGO_VERSION = "0.54.0"
-[context.next.environment]
-HUGO_ENABLEGITINFO = "true"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+
+[[headers]]
+  for = "*.webmanifest"
+  [headers.values]
+    Content-Type = "application/manifest+json; charset=UTF-8"
+
+[[headers]]
+  for = "index.xml"
+  [headers.values]
+    Content-Type = "application/rss+xml"
